--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="pater/pater.css" />
-		<link rel="stylesheet" type="text/css" href="css/uncover.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
 	<body class="demo-3">
@@ -20,72 +19,8 @@
 			<div class="content">
 				<canvas class="scene scene--full" id="scene"></canvas>
 				<div class="content__inner">
-					<h2 class="content__title">Andrew Wooller</h2>
-        </div>
-        <div class="grid">
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/19.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#read</h2>
-              <p class="grid__item-description">Find me tomorrow or never</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/12.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#find</h2>
-              <p class="grid__item-description">Never end it like that</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/13.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#make</h2>
-              <p class="grid__item-description">Why make noise like that?</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/14.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#love</h2>
-              <p class="grid__item-description">No point in running</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/15.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#walk</h2>
-              <p class="grid__item-description">When you get there</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/16.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#less</h2>
-              <p class="grid__item-description">Timeless manners count</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/17.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#only</h2>
-              <p class="grid__item-description">Together we can sit</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/18.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#need</h2>
-              <p class="grid__item-description">The new kid on the block</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/11.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#feed</h2>
-              <p class="grid__item-description">The new kid on the block</p>
-            </div>
-          </div>
+          <h2 class="content__title">Andrew Wooller</h2>
+          <a href="projects.html" class="content__link">Projects</a>
         </div>
 			</div>
 		</main>
@@ -94,9 +29,5 @@
 		<script src="js/perlin.js"></script>
 		<script src="js/TweenMax.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/anime.min.js"></script>
-		<script src="js/uncover.js"></script>
-		<script src="js/grid.js"></script>
 	</body>
 </html>
