--- a/index.html
+++ b/index.html
@@ -4,99 +4,55 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Andrew Wooller</title>
-		<meta name="description" content="A collection of decorative animated background shapes powered by WebGL and TweenMax." />
-		<meta name="keywords" content="webgl, background, shape, web design, web development, tweenmax, gsap, animation" />
-		<meta name="author" content="Louis Hoebregts for Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
-		<link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700|Poppins:600" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="pater/pater.css" />
-		<link rel="stylesheet" type="text/css" href="css/uncover.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+    <meta name="description" content="Portfolio website for Andy Wooller" />
+		<meta name="keywords" content="freelance, web developlment, development, react, react native, portfolio" />
+		<meta name="author" content="Andy Wooller" />
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 	</head>
-	<body class="demo-3">
-		<main>
-			<div class="content">
-				<canvas class="scene scene--full" id="scene"></canvas>
-				<div class="content__inner">
-					<h2 class="content__title">Andrew Wooller</h2>
-        </div>
-        <div class="grid">
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/19.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#read</h2>
-              <p class="grid__item-description">Find me tomorrow or never</p>
+	<body>
+    <!-- MAIN CONTAINER -->
+    <div class="main">
+      <!-- LEFT CONTAINER -->
+      <div class="left_container">
+        <div class="inner_container">
+          <div class="slogan">
+            <h2 class="name">Andy Wooller</h2>
+            <span class="title">Front-end Developer</span>
+          </div>
+          <div class="relative_container">
+            <div class="relative_inner_container">
+              <h1>Creative Development</h1>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim felis dui, eu tristique lectus tincidunt porta. Pellentesque hendrerit eros lorem, vel mollis dolor vehicula at. Nullam mattis fermentum tellus vitae molestie. Integer pretium erat eget ligula varius, et ullamcorper lectus bibendum</p>
+              <div class="skills_container">
+                <span class="skill fab fa-html5 fa-3x"></span>
+                <span class="skill fab fa-css3-alt fa-3x"></span>
+                <span class="skill fab fa-js fa-3x"></span>
+                <span class="skill fab fa-react fa-3x"></span>
+                <span class="skill fab fa-android fa-3x"></span>
+                <span class="skill fab fa-apple fa-3x"></span>
+              </div>
             </div>
           </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/12.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#find</h2>
-              <p class="grid__item-description">Never end it like that</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/13.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#make</h2>
-              <p class="grid__item-description">Why make noise like that?</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/14.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#love</h2>
-              <p class="grid__item-description">No point in running</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/15.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#walk</h2>
-              <p class="grid__item-description">When you get there</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/16.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#less</h2>
-              <p class="grid__item-description">Timeless manners count</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/17.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#only</h2>
-              <p class="grid__item-description">Together we can sit</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/18.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#need</h2>
-              <p class="grid__item-description">The new kid on the block</p>
-            </div>
-          </div>
-          <div class="grid__item">
-            <div class="scroll-img" style="background-image: url(img/11.jpg);"></div>
-            <div class="grid__item-titlewrap">
-              <h2 class="grid__item-title">#feed</h2>
-              <p class="grid__item-description">The new kid on the block</p>
-            </div>
+          <div class="bottom_container">
+            <nav class=menu>
+                <a class="nav_item active" href="./">About</a>
+                <a class="nav_item" href="#projects">Projects</a>
+                <a class="nav_item" href="#contact">Contact</a>
+            </nav>
           </div>
         </div>
-			</div>
-		</main>
-		<script src="js/base.js"></script>
-		<script src="js/three.min.js"></script>
-		<script src="js/perlin.js"></script>
-		<script src="js/TweenMax.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/anime.min.js"></script>
-		<script src="js/uncover.js"></script>
-		<script src="js/grid.js"></script>
+      </div>
+      <div class="right_container">
+        <div class="right_inner_container">
+          <div class="background_image"></div>
+        </div>
+      </div>
+     </div>
+
+    <!-- <script src="js/main.js"></script> -->
 	</body>
 </html>
